--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -1,1 +1,21 @@
-<p>product-form works!</p>
+<form [formGroup]="vendedorForm" (ngSubmit)="onSubmit()">
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>Vendedor</mat-label>
+            <input formControlName="nombreVendedor" matInput>
+        </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="fill">
+        <mat-label>Producto</mat-label>
+        <input formControlName="producto" matInput>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="fill">
+        <mat-label>Precio</mat-label>
+        <input formControlName="precioProducto" matInput>
+      </mat-form-field>
+    </div>
+      <button type="submit">Submit</button>
+</form>
