--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.boton{
+    background-color: rgba(226, 81, 23, 0.774);
+}
+.example-spacer {
+    flex: 1 1 auto;
+  }
