--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,8 +3,8 @@
       <span appFuentes class="boton">List-App</span>
       <span class="example-spacer"></span> <!--separador universal-->
       <!-- se inyecta menu dinamicamente por archivo json -->
-      <div *ngIf="menu">
-        <button  appFuentes class="boton" mat-button *ngFor="let item of menu" [routerLink]="item.redirect">{{item.nombre}} </button> 
+      <div >
+        <button  appFuentes class="boton" mat-button  > </button> 
 
       </div>
 
