--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,3 +9,9 @@
 .boton{
     background-color: rgba(226, 81, 23, 0.774);
 }
+.sidenav a {
+    color: #fff;
+}
+.sidenav i {
+    padding-right: 10px;
+}
