--- a/src/app/estudiantes-form/estudiantes-form.component.html
+++ b/src/app/estudiantes-form/estudiantes-form.component.html
@@ -11,7 +11,7 @@
         </mat-grid-tile>
 
         <mat-grid-tile [colspan]="3" [rowspan]="5">
-          <img width="250" height="250" src="../../assets/img/programmer.png" alt="logo de usuario">
+          <img width="250" height="250" src="https://user-images.githubusercontent.com/48678280/88862734-4903af80-d201-11ea-968b-9c939d88a37c.gif" alt="logo de usuario">
         </mat-grid-tile>
 
         <mat-grid-tile [colspan]="1" [rowspan]="1">
