--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,10 @@
 <div class="bg-div">
     <mat-toolbar class="toolbar-container">
+      <span>
+        <a routerLink="/">
+            <img class="logo" src="https://user-images.githubusercontent.com/48678280/88862734-4903af80-d201-11ea-968b-9c939d88a37c.gif" alt="logo">
+        </a>
+    </span>
       <span appFuentes class="boton">List-App</span>
       <span class="example-spacer"></span> <!--separador universal-->
       <!-- se inyecta menu dinamicamente por archivo json -->
