--- a/src/app/estudiantes/estudiantes-list/estudiantes-list.component.html
+++ b/src/app/estudiantes/estudiantes-list/estudiantes-list.component.html
@@ -32,7 +32,7 @@
         <!-- class="mat-elevation-z8" -->
         <ng-container matColumnDef="nombreEstudiante">
           <th mat-header-cell *matHeaderCellDef> Estudiante </th>
-          <td mat-cell *matCellDef="let element" (click)="onClickRow(element)">
+          <td mat-cell *matCellDef="let element" >
             {{element.nombreEstudiante}}
           </td>
         </ng-container>
@@ -40,27 +40,55 @@
         <ng-container matColumnDef="curso">
           <th mat-header-cell *matHeaderCellDef>
             Curso </th>
-          <td mat-cell *matCellDef="let element" (click)="onClickRow(element)">
+          <td mat-cell *matCellDef="let element" >
             {{element.curso}}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="nota">
           <th mat-header-cell *matHeaderCellDef> Nota </th>
-          <td mat-cell *matCellDef="let element" (click)="onClickRow(element)"> {{element.nota}} </td>
+          <td mat-cell *matCellDef="let element" > {{element.nota}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="delete">
+        <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef>
           </th>
           <td mat-cell *matCellDef="let element">
-            <div (click)="borrarEstudiante(element)">
+            <a *ngIf="!admin" class="pointer mx-2" style="color: #18b031">
+              <mat-icon>search</mat-icon>
+            </a>
+            <a *ngIf="admin" class="pointer mx-2" style="color: #1c89c9" 
+              (click)="onClickRow(element)">
+              <mat-icon>edit</mat-icon>
+            </a>
+            <a *ngIf="admin" class="pointer mx-2" (click)="borrarEstudiante(element)" style="color: rgb(170, 24, 24)">
+              <mat-icon>delete</mat-icon>
+            </a>
+            <!-- <div (click)="borrarEstudiante(element)">
               <span class="material-icons">
                 delete
               </span>
-            </div>
+            </div> -->
+
           </td>
         </ng-container>
+        <!-- <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef class="fs-5 text-white" style="text-align: right ;">
+            Acciones </th>
+          <td mat-cell *matCellDef="let element; let i = index" style="text-align: right ;">
+
+            <a *ngIf="!admin" class="pointer mx-2" style="color: #18b031">
+              <mat-icon>search</mat-icon>
+            </a>
+            <a *ngIf="admin" class="pointer mx-2" style="color: #1c89c9" 
+              (click)="onClickRow(element)">
+              <mat-icon>edit</mat-icon>
+            </a>
+            <a *ngIf="admin" class="pointer mx-2" (click)="borrarEstudiante(element)" style="color: rgb(170, 24, 24)">
+              <mat-icon>delete</mat-icon>
+            </a>
+          </td> 
+        </ng-container> -->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -73,7 +101,7 @@
   </div>
   <div *ngIf="estudiantes.length == 0 && character" >
     <!-- <h2 class="text-white">No existen registros para mostrar</h2> -->
-    <h2> {{character.name}} </h2>
+    <h2 class="text-white"> {{character.name}} dice: aqui no hay nadie! </h2>
     <img [src]="character.image" >
     
   </div>
