--- a/src/app/estudiantes/estudiantes-list/estudiantes-list.component.html
+++ b/src/app/estudiantes/estudiantes-list/estudiantes-list.component.html
@@ -50,11 +50,16 @@
           <td mat-cell *matCellDef="let element" > {{element.nota}} </td>
         </ng-container>
 
+        <!-- <ng-container *ngIf="descripcion" matColumnDef="descripcion">
+          <th mat-header-cell *matHeaderCellDef> Descripcion </th>
+          <td mat-cell *matCellDef="let element" > {{element.descripcion}} </td>
+        </ng-container> -->
+
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef>
           </th>
           <td mat-cell *matCellDef="let element">
-            <a *ngIf="!admin" class="pointer mx-2" style="color: #18b031">
+            <a  class="pointer mx-2" style="color: #18b031">
               <mat-icon>search</mat-icon>
             </a>
             <a *ngIf="admin" class="pointer mx-2" style="color: #1c89c9" 
@@ -64,31 +69,11 @@
             <a *ngIf="admin" class="pointer mx-2" (click)="borrarEstudiante(element)" style="color: rgb(170, 24, 24)">
               <mat-icon>delete</mat-icon>
             </a>
-            <!-- <div (click)="borrarEstudiante(element)">
-              <span class="material-icons">
-                delete
-              </span>
-            </div> -->
+          
 
           </td>
         </ng-container>
-        <!-- <ng-container matColumnDef="acciones">
-          <th mat-header-cell *matHeaderCellDef class="fs-5 text-white" style="text-align: right ;">
-            Acciones </th>
-          <td mat-cell *matCellDef="let element; let i = index" style="text-align: right ;">
-
-            <a *ngIf="!admin" class="pointer mx-2" style="color: #18b031">
-              <mat-icon>search</mat-icon>
-            </a>
-            <a *ngIf="admin" class="pointer mx-2" style="color: #1c89c9" 
-              (click)="onClickRow(element)">
-              <mat-icon>edit</mat-icon>
-            </a>
-            <a *ngIf="admin" class="pointer mx-2" (click)="borrarEstudiante(element)" style="color: rgb(170, 24, 24)">
-              <mat-icon>delete</mat-icon>
-            </a>
-          </td> 
-        </ng-container> -->
+        
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
